[gd_scene load_steps=11 format=3 uid="uid://cphcmsugjsscn"]

[ext_resource type="PackedScene" uid="uid://0g8fcobbvi84" path="res://scenes/dungeon/dungeon.tscn" id="1_0wfyh"]
[ext_resource type="Script" uid="uid://bsq341p3oxk46" path="res://scenes/GameState.gd" id="1_o6xl0"]
[ext_resource type="MeshLibrary" uid="uid://uso6cfmk5r51" path="res://tileset white.tres" id="2_o6xl0"]
[ext_resource type="PackedScene" uid="uid://ed1wo7vfltsb" path="res://scenes/Player.tscn" id="2_sugp2"]
[ext_resource type="Script" uid="uid://bk075a76c1hkh" path="res://scripts/UIPartyContainer.gd" id="3_sugp2"]
[ext_resource type="PackedScene" uid="uid://b6i5a4uv2t1do" path="res://scenes/UIPartyMemberSlot.tscn" id="4_jyhfs"]
[ext_resource type="Script" uid="uid://ckmaadhfher4" path="res://scripts/TextboxUI.gd" id="5_tbgi4"]

[sub_resource type="Environment" id="Environment_o6xl0"]
background_mode = 2
background_color = Color(1, 1, 1, 1)
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_sky_contribution = 0.0
ambient_light_energy = 0.01
ssao_enabled = true
ssao_radius = 0.49
ssao_intensity = 1.66
fog_enabled = true
fog_light_color = Color(0.772549, 0.85098, 1, 1)
fog_light_energy = 0.09
volumetric_fog_density = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tbgi4"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_sugp2"]

[node name="Main" type="Node3D"]
script = ExtResource("1_o6xl0")

[node name="Dungeon" parent="." instance=ExtResource("1_0wfyh")]
mesh_library = ExtResource("2_o6xl0")
data = {
"cells": PackedInt32Array()
}

[node name="Player" parent="Dungeon" instance=ExtResource("2_sugp2")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Dungeon"]
environment = SubResource("Environment_o6xl0")

[node name="TransitionRect" type="ColorRect" parent="."]
layout_direction = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0694218, 0.00964971, 0.263646, 1)

[node name="BattleTransition" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.546409, 7.33994e-07, 3.85046e-07, 1)

[node name="PartyPanel" type="Panel" parent="."]
anchors_preset = -1
anchor_top = 0.716
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.0319824
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("3_sugp2")

[node name="PanelContainer" type="PanelContainer" parent="PartyPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.312
anchor_top = 0.01
anchor_right = 0.687
anchor_bottom = 1.0
offset_left = -2.36002
offset_top = -2.1808
offset_right = -2.36005
offset_bottom = -0.0800171
theme_override_styles/panel = SubResource("StyleBoxFlat_tbgi4")

[node name="PartyContainer" type="VBoxContainer" parent="PartyPanel/PanelContainer"]
z_index = 100
material = SubResource("CanvasItemMaterial_sugp2")
custom_minimum_size = Vector2(100, 50)
layout_mode = 2

[node name="FrontRow" type="GridContainer" parent="PartyPanel/PanelContainer/PartyContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
columns = 3

[node name="PartyMemberSlot1" type="MarginContainer" parent="PartyPanel/PanelContainer/PartyContainer/FrontRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="PartyMember" parent="PartyPanel/PanelContainer/PartyContainer/FrontRow/PartyMemberSlot1" instance=ExtResource("4_jyhfs")]
layout_mode = 2

[node name="PartyMemberSlot2" type="MarginContainer" parent="PartyPanel/PanelContainer/PartyContainer/FrontRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="PartyMember" parent="PartyPanel/PanelContainer/PartyContainer/FrontRow/PartyMemberSlot2" instance=ExtResource("4_jyhfs")]
layout_mode = 2

[node name="PartyMemberSlot3" type="MarginContainer" parent="PartyPanel/PanelContainer/PartyContainer/FrontRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="PartyMember" parent="PartyPanel/PanelContainer/PartyContainer/FrontRow/PartyMemberSlot3" instance=ExtResource("4_jyhfs")]
layout_mode = 2

[node name="BackRow" type="GridContainer" parent="PartyPanel/PanelContainer/PartyContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
columns = 3

[node name="PartyMemberSlot1" type="MarginContainer" parent="PartyPanel/PanelContainer/PartyContainer/BackRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="PartyMember" parent="PartyPanel/PanelContainer/PartyContainer/BackRow/PartyMemberSlot1" instance=ExtResource("4_jyhfs")]
layout_mode = 2

[node name="PartyMemberSlot2" type="MarginContainer" parent="PartyPanel/PanelContainer/PartyContainer/BackRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="PartyMember" parent="PartyPanel/PanelContainer/PartyContainer/BackRow/PartyMemberSlot2" instance=ExtResource("4_jyhfs")]
layout_mode = 2

[node name="PartyMemberSlot3" type="MarginContainer" parent="PartyPanel/PanelContainer/PartyContainer/BackRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="PartyMember" parent="PartyPanel/PanelContainer/PartyContainer/BackRow/PartyMemberSlot3" instance=ExtResource("4_jyhfs")]
layout_mode = 2

[node name="UIRoot" type="CanvasLayer" parent="."]

[node name="TextboxUI" type="Control" parent="UIRoot"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_tbgi4")

[node name="Panel" type="Panel" parent="UIRoot/TextboxUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpeakerLabel" type="Label" parent="UIRoot/TextboxUI/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.325
anchor_top = 0.714
anchor_right = 0.505
anchor_bottom = 0.804
offset_top = -0.0400085
offset_right = 108.8
offset_bottom = 7.56
theme_override_font_sizes/font_size = 20

[node name="TextLabel" type="Label" parent="UIRoot/TextboxUI/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.32
anchor_top = 0.839
anchor_right = 0.56
anchor_bottom = 1.0
offset_left = -6.10352e-05
offset_top = 0.255981
theme_override_font_sizes/font_size = 20
